[gd_scene load_steps=2 format=3 uid="uid://b6pmrtlwqyj41"]

[ext_resource type="Script" uid="uid://b1e72i6g84lb8" path="res://scripts/UI/WorldMap.gd" id="1_41tqo"]

[node name="WorldMap" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_41tqo")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StudentHUD" type="PanelContainer" parent="."]
layout_mode = 1
offset_right = 237.0
offset_bottom = 92.0

[node name="HBoxContainer" type="HBoxContainer" parent="StudentHUD"]
layout_mode = 2

[node name="StudentNameLabel" type="Label" parent="StudentHUD/HBoxContainer"]
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="StudentHUD/HBoxContainer"]
layout_mode = 2

[node name="ThemeTitleLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="ThemeViewer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="TextureRect" parent="ThemeViewer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Theme1" type="Control" parent="ThemeViewer/Background"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -250.0
offset_right = 250.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="ThemeBackground" type="TextureRect" parent="ThemeViewer/Background/Theme1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="PhaseButton" type="Button" parent="ThemeViewer/Background/Theme1"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="Theme2" type="Control" parent="ThemeViewer/Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 536.0
offset_top = 284.0
offset_right = 576.0
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2

[node name="ThemeBackground" type="TextureRect" parent="ThemeViewer/Background/Theme2"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PhaseButton" type="Button" parent="ThemeViewer/Background/Theme2"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="Theme3" type="Control" parent="ThemeViewer/Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 556.0
offset_top = 304.0
offset_right = 556.0
offset_bottom = 304.0
grow_horizontal = 2
grow_vertical = 2

[node name="ThemeBackground" type="TextureRect" parent="ThemeViewer/Background/Theme3"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PhaseButton" type="Button" parent="ThemeViewer/Background/Theme3"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="PreviousThemeButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 40.0
offset_bottom = 20.0
grow_vertical = 2

[node name="NextThemeButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
